fixed gap

--- a/optic/css/style.css
+++ b/optic/css/style.css
@@ -254,6 +254,7 @@ main {
   background-color: #333;
   border-radius: 50%;
   position: relative;
+  margin: 0 5px;
 }
 
 .slick-dots li::after {
@@ -2490,6 +2491,7 @@ main {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    gap: 0px;
   }
 
   .footer__logo {
@@ -2504,6 +2506,7 @@ main {
   }
 
   .footer__column {
+    margin-top: 30px;
     -webkit-box-ordinal-group: 3;
         -ms-flex-order: 2;
             order: 2;
@@ -2516,7 +2519,7 @@ main {
   }
 
   .footer__contacts {
-    gap: 5px;
+    gap: 0px;
     border-bottom: 1px solid #fff;
     padding-bottom: 15px;
   }
@@ -2536,7 +2539,7 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 19px;
+    gap: 0px;
   }
 
   .see__heading {
@@ -2549,6 +2552,7 @@ main {
     max-width: -webkit-fit-content;
     max-width: -moz-fit-content;
     max-width: fit-content;
+    margin-bottom: 20px;
   }
 
   .see__video {
@@ -2579,11 +2583,19 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 30px;
+    gap: 0px;
+  }
+
+  .advantages__item {
+    margin-bottom: 30px;
   }
 
   .advantages__item p {
     line-height: 1.25;
+  }
+
+  .advantages__item:last-of-type {
+    margin-bottom: 0;
   }
 
   .about__content {
@@ -2591,7 +2603,7 @@ main {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
-    gap: 40px;
+    gap: 0px;
   }
 
   .about__advantages {
@@ -2606,7 +2618,7 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 34px;
+    gap: 0px;
   }
 
   .about__item {
@@ -2622,6 +2634,11 @@ main {
         -ms-flex-align: center;
             align-items: center;
     text-align: center;
+    margin-bottom: 34px;
+  }
+
+  .about__item:last-of-type {
+    margin-bottom: 0;
   }
 
   .about__item p {
@@ -2637,6 +2654,7 @@ main {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
+    margin-bottom: 40px;
   }
 
   .about__info p {
@@ -2652,7 +2670,11 @@ main {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    gap: 29px;
+    gap: 0px;
+  }
+
+  .services__column {
+    margin-bottom: 29px;
   }
 
   .services .services__content {
@@ -2686,6 +2708,18 @@ main {
     -webkit-transform: translateY(0);
         -ms-transform: translateY(0);
             transform: translateY(0);
+  }
+
+  .products__menu {
+    gap: 0px;
+  }
+
+  .products__item {
+    margin-right: 10px;
+  }
+
+  .products__item:last-of-type {
+    margin-right: 0;
   }
 
   .products__slider .slick-arrow {
@@ -2738,7 +2772,15 @@ main {
 
 @media (max-width: 768px) {
   .slick-dots {
-    gap: 10px;
+    gap: 0px;
+  }
+
+  .clientCart__content {
+    gap: 0px;
+  }
+
+  .clientCart__heading {
+    margin-bottom: 24px;
   }
 
   .clientCart__photo {
